// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar/> should render components w/ auth 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    avatar=""
    isLoggedIn={true}
    name=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        Array [
          <NavLink
            activeClassName="active"
            aria-current="page"
            className="button button-outline"
            to="/logout"
          >
            Logout
          </NavLink>,
        ],
        <figure
          className="avatar animated rotateIn delay-2"
        >
          <NavLink
            activeClassName="active"
            aria-current="page"
            to="/profile"
          >
            <img
              alt=""
              src="https://pngimage.net/wp-content/uploads/2018/05/default-user-profile-image-png-6.png"
            />
          </NavLink>
        </figure>,
      ],
      "className": "flex navbar animated slideInDown",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "/logout",
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "aria-current": "page",
          "children": "Logout",
          "className": "button button-outline",
          "to": "/logout",
        },
        "ref": null,
        "rendered": "Logout",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <NavLink
            activeClassName="active"
            aria-current="page"
            to="/profile"
          >
            <img
              alt=""
              src="https://pngimage.net/wp-content/uploads/2018/05/default-user-profile-image-png-6.png"
            />
          </NavLink>,
          "className": "avatar animated rotateIn delay-2",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "aria-current": "page",
            "children": <img
              alt=""
              src="https://pngimage.net/wp-content/uploads/2018/05/default-user-profile-image-png-6.png"
            />,
            "to": "/profile",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "",
              "src": "https://pngimage.net/wp-content/uploads/2018/05/default-user-profile-image-png-6.png",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": [Function],
        },
        "type": "figure",
      },
    ],
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          Array [
            <NavLink
              activeClassName="active"
              aria-current="page"
              className="button button-outline"
              to="/logout"
            >
              Logout
            </NavLink>,
          ],
          <figure
            className="avatar animated rotateIn delay-2"
          >
            <NavLink
              activeClassName="active"
              aria-current="page"
              to="/profile"
            >
              <img
                alt=""
                src="https://pngimage.net/wp-content/uploads/2018/05/default-user-profile-image-png-6.png"
              />
            </NavLink>
          </figure>,
        ],
        "className": "flex navbar animated slideInDown",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "/logout",
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "aria-current": "page",
            "children": "Logout",
            "className": "button button-outline",
            "to": "/logout",
          },
          "ref": null,
          "rendered": "Logout",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <NavLink
              activeClassName="active"
              aria-current="page"
              to="/profile"
            >
              <img
                alt=""
                src="https://pngimage.net/wp-content/uploads/2018/05/default-user-profile-image-png-6.png"
              />
            </NavLink>,
            "className": "avatar animated rotateIn delay-2",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "aria-current": "page",
              "children": <img
                alt=""
                src="https://pngimage.net/wp-content/uploads/2018/05/default-user-profile-image-png-6.png"
              />,
              "to": "/profile",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "",
                "src": "https://pngimage.net/wp-content/uploads/2018/05/default-user-profile-image-png-6.png",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": [Function],
          },
          "type": "figure",
        },
      ],
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Navbar/> should render components w/o auth 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    avatar=""
    isLoggedIn={false}
    name=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        Array [],
        false,
      ],
      "className": "flex navbar animated slideInDown",
    },
    "ref": null,
    "rendered": Array [
      false,
    ],
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          Array [],
          false,
        ],
        "className": "flex navbar animated slideInDown",
      },
      "ref": null,
      "rendered": Array [
        false,
      ],
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
